# Isartor

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  SECURITY.md  architecture.md  install.ps1  install.sh
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  production_deployment.yml
.github/workflows/: benchmark.yml  ci.yml  claude-code-benchmark.yml  dist_release.yml  docs.yml  integration-test.yml  release.yml  roi-report.yml  scenario-run.yml  tag_release.yml
benches/: cache_latency.rs  concurrency.rs  e2e_pipeline.rs
benchmarks/: README.md  claude_bench.py  claude_code_benchmark.py  report.py  roi_report.py  run.py  scenario_runner.py
benchmarks/fixtures/: claude_code_tasks.jsonl  claude_code_todo.jsonl  claude_code_todo_app.jsonl  diverse_tasks.jsonl  faq_loop.jsonl
benchmarks/results/: claude_code_benchmark.json  claude_code_benchmark_report.md  claude_code_copilot.json  claude_code_copilot_report.md  latest.json  roi_report.json  roi_report.md
dashboards/: prometheus-grafana.json
docker/: .env.example  .env.full.example  .env.qwen-benchmark.example  .env.sidecar.example  Dockerfile  Dockerfile.embedded  Dockerfile.minimal  Dockerfile.sidecar  docker-compose.azure.yml  docker-compose.embedded.yml  docker-compose.full.yml  docker-compose.observability.yml  docker-compose.qwen-benchmark.yml  docker-compose.qwen-sidecar.yml  docker-compose.sidecar.yml  docker-compose.yml  otel-collector-config.yaml  tempo-config.yaml
docker/grafana/dashboards/: isartor_dashboard.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
docs/: 1-QUICKSTART.md  2-ARCHITECTURE.md  3-ENTERPRISE-GUIDE.md  4-INTEGRATIONS.md  5-CONFIGURATION-REF.md  6-OBSERVABILITY.md  AIR-GAPPED.md  ARCHITECTURE.md  CLAUDE-COPILOT.md  PERFORMANCE-TUNING.md  README.md  TESTING.md  TROUBLESHOOTING.md  architecture-decisions.md  benchmark-qwen-layer2.md  blog-fedramp.md  configuration.md  deploy-level1-minimal.md  deploy-level2-sidecar.md  deploy-level3-enterprise.md  observability.md
docs-site/: book.toml
docs-site/src/: README.md  SUMMARY.md
docs-site/src/blog/: fedramp.md
docs-site/src/concepts/: architecture-decisions.md  architecture.md  deflection-stack.md
docs-site/src/configuration/: reference.md
docs-site/src/deployment/: air-gapped.md  level1-minimal.md  level2-sidecar.md  level3-enterprise.md
docs-site/src/development/: contributing.md  testing.md  troubleshooting.md
docs-site/src/getting-started/: installation.md  quickstart.md
docs-site/src/integrations/: claude-code.md  claude-copilot.md  claude-desktop.md  codex.md  copilot-vscode.md  copilot.md  cursor.md  gemini.md  generic.md  openclaw.md  overview.md
docs-site/src/observability/: metrics-tracing.md  performance-tuning.md
docs-site/theme/: custom.css
k8s/: gateway.yaml
scripts/: add_ann_deps.sh  claude-copilot-smoke-test.sh  download_models.sh  download_qwen_gguf.sh  install.ps1  install.sh  run_claude_code_benchmark.sh  setup_onnxruntime.sh  smoke-test.sh
src/: config.rs  errors.rs  factory.rs  first_run.rs  handler.rs  health.rs  hf.rs  lib.rs  main.rs  metrics.rs  models.rs  state.rs  telemetry.rs  tool_identity.rs  vector_cache.rs  visibility.rs
src/adapters/: cache.rs  router.rs
src/cli/: logs.rs  mcp.rs  mod.rs  providers.rs  set_key.rs  setup.rs  stats.rs  stop.rs  up.rs  update.rs
src/cli/connect/: antigravity.rs  claude.rs  claude_copilot.rs  claude_desktop.rs  copilot.rs  mod.rs  openclaw.rs  state.rs  status.rs
src/clients/: mod.rs  slm.rs
src/compression/: cache.rs  mod.rs  optimize.rs  pipeline.rs
src/compression/stages/: content_classifier.rs  dedup.rs  log_crunch.rs  mod.rs
src/core/: context_compress.rs  mod.rs  ports.rs  prompt.rs  request_logger.rs  retry.rs
src/layer1/: embeddings.rs  layer1a_cache.rs  mod.rs
src/middleware/: auth.rs  body_buffer.rs  cache.rs  context_optimizer.rs  mod.rs  monitoring.rs  slm_triage.rs
src/pipeline/: concurrency.rs  context.rs  mod.rs  orchestrator.rs  stubs.rs  traits.rs
src/pipeline/implementations/: embedder.rs  external_llm.rs  intent_classifier.rs  local_executor.rs  mod.rs  reranker.rs  vector_store.rs
src/providers/: copilot.rs  generic_openai.rs  mod.rs
src/proxy/: connect.rs
src/services/: local_inference.rs  mod.rs
tests/: evaluate_classification.py  golden_data.json  integration_suite.rs  integration_test.rs  perf_layers.py  phone_home_audit.rs  scenario_suite.rs  unit_suite.rs  vector_cache_ann_test.rs
tests/common/: gateway.rs  mod.rs
tests/integration/: cache_flow_tests.rs  claude_copilot_tests.rs  claude_desktop_tests.rs  end_to_end_tests.rs  middleware_chain_tests.rs  mod.rs  slm_flow_tests.rs
tests/scenarios/: deflection_tests.rs  failure_scenarios.rs  mod.rs  performance_tests.rs
tests/unit/: cache_tests.rs  error_tests.rs  mod.rs
