[package]
name = "isartor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework & middleware
axum = "0.8"
tower = { version = "0.5", features = ["util"] }

# HTTP client (rustls to avoid OpenSSL linking issues with musl)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Configuration
config = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Logging (used by adapters/factory for format-string log macros)
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Body / bytes utilities
bytes = "1"
http-body-util = "0.1"

# Hashing (exact-match cache keys)
sha2 = "0.10"
hex = "0.4"
rig-core = "0.32.0"
async-trait = "0.1.89"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "metrics", "trace", "internal-logs"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.1"

# ── Embedded ML Inference (candle) ─────────────────────────────────
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"], optional = true }
tokenizers = { version = "0.21", optional = true }
fastembed = { version = "5.12.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "image-models"] }

lru = "0.12"
parking_lot = "0.12"
ahash = "0.8"

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
wiremock = "0.6"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"

[profile.release]
opt-level = "z"   # optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["embedded-inference"]
embedded-inference = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers"
]
