[package]
name = "isartor"
version = "0.1.26"
edition = "2024"
license = "Apache-2.0"
description = "Open-source Prompt Firewall — a local LLM gateway with caching, semantic deduplication, and content filtering"
homepage = "https://github.com/isartor-ai/Isartor"
repository = "https://github.com/isartor-ai/Isartor"
readme = "README.md"
authors = ["Isartor AI <info@isartor.ai>"]
keywords = ["llm", "proxy", "firewall", "prompt", "cache"]
categories = ["command-line-utilities", "web-programming"]
publish = true
exclude = [
    "docker/",
    "k8s/",
    "dashboards/",
    "benchmarks/",
    "demo/prompts/",
    "scripts/",
    "docs/",
    ".github/",
]


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework & middleware
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

# HTTP client (rustls to avoid OpenSSL linking issues with musl)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Configuration
config = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"

# Logging (used by adapters/factory for format-string log macros)
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Body / bytes utilities
bytes = "1"
http-body-util = "0.1"

# Hashing (exact-match cache keys)
sha2 = "0.10"
hex = "0.4"
rig-core = "0.32.0"
async-trait = "0.1.89"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "metrics", "trace", "internal-logs"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.1"

# ── Embedded ML Inference (pure-Rust candle stack) ─────────────────
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "tokio", "rustls-tls"] }
tokenizers = "0.22"
lru = "0.16"
parking_lot = "0.12"
ahash = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }

# TLS MITM proxy (CONNECT proxy for Copilot CLI)
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
rpassword = "5"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }
time = "0.3"

# Self-update (archive extraction)
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"

# Progress bars (first-run UX)
indicatif = "0.18"

# Time formatting
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
wiremock = "0.6"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = "z"   # optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["embedded-inference"]
embedded-inference = []

[[bench]]
name = "cache_latency"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "e2e_pipeline"
harness = false
